2010-05-31  Jonathan Wakely  <jwakely.gcc@gmail.com>

PR libstdc++/43820
	* include/bits/shared_ptr_base.h: Require complete type.
	* include/tr1/shared_ptr.h: Likewise.
	* testsuite/20_util/shared_ptr/cons/43820.cc: New.
	* testsuite/tr1/2_general_utilities/shared_ptr/cons/43820.cc: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@160082 138bc75d-0d04-0410-961f-82ee72b054a4